--- a/src/index.css
+++ b/src/index.css
@@ -23,12 +23,16 @@ body {
     height: 100%;
 
   }
+  .profileName{
+    color: white;
+    font-size:small;
+  }
   .footerComplete{
     justify-content:flex-start !important;
     flex-wrap: wrap !important;
   }
   .upComingHeadCard{
-    padding-right: 7vw !important ;
+    padding-right: 6.5vw !important ;
     width: 41vw !important;  
   } 
   .searchBoxfield{
@@ -41,7 +45,10 @@ body {
     padding-right: 0 !important;
     padding-left: 0 !important;
   }
+.Main{
+  padding: 0;
 
+}
   
 }
 /* @media only screen and ((max-width: 769px) and (min-width:1200px) ){
@@ -101,8 +108,9 @@ background-color: #5390d9;
 }
 .upComingHeadCard{
   background: transparent;
+  padding-top: 8px;
   padding-right: 4vw;
-  width: 250px;
+  width: 260px;
 }
 .fui-CardPreview{
   margin: 0 !important;
@@ -126,17 +134,80 @@ background-color: #5390d9;
 }
 .description{
   overflow:hidden;
-  width: 400px;
-  display:block;
-  flex-wrap:wrap;
+  width: 85vw;
+  display:block !important;
+  /* flex-wrap:wrap; */
   cursor:pointer;
 }
 .footerComplete{
   justify-content: flex-end;
   align-items: center;
 }
+.descriptionDialog{
+  background-color: #009dd2;
+}
 /* .latestUpcomingCard{
   background: "transparent";
   cursor: "pointer";
 
 } */
+.dialogPopup{
+  display: flex;
+  justify-content: flex-end;
+}
+.taskCompletedDialog{
+  display: flex;
+  justify-content: center;
+  column-gap: 1vw;
+}
+.OnGoing{
+  margin-top:0;
+}
+
+.UpComing{
+  margin-top:6px;
+}
+.Completed{
+  margin-top:6px;
+}
+/* .latestTaskTitle{
+  width:5px;
+  display:flex;
+} */
+.rhhzfde{
+  padding-right: 2px !important;
+  padding-top: 5px !important;
+}
+.profileName{
+  color: white;
+  font-size:larger;
+}
+/* .f1s2aq7o {
+  color: white !important;
+} */
+.highContrast{
+  color: white !important;
+}
+
+.ongoingProgressBar{
+  background-color: green !important;
+}
+.almostCompleteProgressBar{
+  background-color: greenyellow !important;
+}
+.overdueProgressBar{
+  background-color: red !important;
+}
+/* .ftywsgz {
+  background-color: white !important ;
+} */
+/* .fui-ProgressBar{
+  background-color: chartreuse;
+} */
+/* .ftywsgz {
+  background-color: white !important;
+} */
+.progress.fui-ProgressBar__bar{
+  background-color:red !important;
+  
+}
